setup framework for UI dev

--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hc-redux-middleware": "^1.0.2",
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
